-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Replication
-
Fully Compatible
-
ALL
-
v4.2, v4.0, v3.6
-
Repl 2019-10-21, Repl 2019-11-04
-
19
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Currently, reconfig cmd does not wrap the no-op oplog write write in a writeConflictRetry block. It's always safe to wrap any writes to a record store in a writeConflictRetry block because writeConflict exception can be thrown in the mongodb layer even for some memory pressure/issues in WiredTiger.