SERVER-43236 Wrap reconfig cmd no-op oplog write in writeConflictRetry block